# octi-logger

./: CMakeLists.txt  conanfile.py
include/octi-logger/: octi-channel.h  octi-log.h  octi-logger.h  octi-manager-config.h  octi-manager.h  octi-sink-config.h  octi-sink-factory.h  octi-sink.h
include/octi-logger/sinks/: octi-console-sink.h  octi-file-sink.h  octi-syslog-sink.h
src/: octi-channel.cpp  octi-log.cpp  octi-logger.cpp  octi-manager-config.cpp  octi-manager.cpp  octi-sink-config.cpp  octi-sink-factory.cpp  octi-sink.cpp
src/sinks/: octi-console-sink.cpp  octi-file-sink.cpp  octi-syslog-sink.cpp
